<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tak Firebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
