<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_home" /> <!-- Corrected: Using a single string resource for title -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_profile" /> <!-- Corrected: Using the specified string resource -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" /> <!-- Corrected: Using the specified string resource -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/menu_logout" /> <!-- Corrected: Using the specified string resource -->
        </menu>
    </item>

</menu>
